@@ -1,3 +1,7 @@
+2010-06-15  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/vanilla.cpp: Converted to new API
+
 2010-06-14  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/calendars.cpp: Yet more simplification from "new" Rcpp API
